--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,3 +15,6 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm test
+      - run: npm run build
+      - run: npm run build-storybook
+
