--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,4 +17,18 @@ jobs:
       - run: npm test
       - run: npm run build
       - run: npm run build-storybook
+      - name: Extract git branch
+        run: |
+            # Short name for current branch. For PRs, use target branch (base ref)
+            GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
+            echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
+      - run: |
+            echo "Current branch $GIT_BRANCH"
+
+            git config user.name "GitHub Actions"
+            git config user.email "github-actions@users.noreply.github.com"
+
+            npm version patch --no-git-tag-version
+
+            git status
 
