--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,15 @@ jobs:
 
             npm version patch --no-git-tag-version
 
+            VERSION="$(cat package.json | jq -r '.version')"
+
             git status
 
+            git add .
+
+            git commit -m "Release ${VERSION}
+
+            [skip ci]
+            "
+
+            git status
