--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,12 @@ name: Build web components
 
 on: [push]
 
+env:
+    CI: true
+
+permissions:
+    contents: write
+
 jobs:
   Build:
     runs-on: ubuntu-latest
