--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "urnovl-web-components",
   "version": "0.0.8",
-  "description": "Stencil Component Starter",
+  "description": "Web components for Urnovl",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
   "types": "dist/types/index.d.ts",
