--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@stencil/core": "^4.20.0",
     "@storybook/addon-essentials": "^8.2.7",
     "@storybook/addon-links": "^8.2.7",
+    "@storybook/addon-storysource": "^8.2.7",
     "@storybook/blocks": "^8.2.7",
     "@storybook/test": "^8.2.7",
     "@storybook/web-components": "^8.2.7",
