--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest-cli": "^29.7.0",
     "lit": "^3.2.0",
     "puppeteer": "^23.0.2",
+    "sharp": "^0.33.4",
     "storybook": "^8.2.8",
     "storybook-addon-stencil": "^0.2.1",
     "typescript": "^5.5.4"
