--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.8.0",
+    "@chromatic-com/storybook": "^1.9.0",
     "@stencil/core": "^4.21.0",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-links": "^8.2.9",
@@ -43,15 +43,16 @@
     "@storybook/web-components": "^8.2.9",
     "@storybook/web-components-vite": "^8.2.9",
     "@types/jest": "^29.5.12",
-    "@types/node": "^22.5.2",
+    "@types/node": "^22.5.4",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "lit": "^3.2.0",
-    "puppeteer": "^23.2.2",
+    "puppeteer": "^23.3.0",
     "sharp": "^0.33.5",
     "storybook": "^8.2.9",
     "storybook-addon-stencil": "^0.2.1",
+    "storybook-dark-mode": "^4.0.2",
     "typescript": "^5.5.4"
   },
   "license": "MIT",
