--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -2,8 +2,8 @@ name: Commit
 
 on:
     push:
-        branches:
-            - "!master"
+        branches-ignore:
+            - master
     pull_request:
         branches:
             - master
@@ -12,14 +12,14 @@ env:
     CI: true
 
 jobs:
-  Build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - run: npm ci
-      - run: npm test
-      - run: npm run build
-      - run: npm run build-storybook
+    Build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 20
+            - run: npm ci
+            - run: npm test
+            - run: npm run build
+            - run: npm run build-storybook
