--- a/.github/workflows/pr_merge.yml
+++ b/.github/workflows/pr_merge.yml
@@ -12,47 +12,47 @@ permissions:
     contents: write
 
 jobs:
-  Build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-            node-version: 20
-            registry-url: "https://registry.npmjs.org"
-      - run: npm ci
-      - run: npm test
-      - run: npm run build
-      - run: npm run build-storybook
-      - name: Extract git branch
-        run: |
-            # Short name for current branch. For PRs, use target branch (base ref)
-            GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
-            echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
-      - run: |
-            echo "Current branch $GIT_BRANCH"
+    Build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 20
+                  registry-url: 'https://registry.npmjs.org'
+            - run: npm ci
+            - run: npm test
+            - run: npm run build
+            - run: npm run build-storybook
+            - name: Extract git branch
+              run: |
+                  # Short name for current branch. For PRs, use target branch (base ref)
+                  GIT_BRANCH=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}
+                  echo "GIT_BRANCH=$GIT_BRANCH" >> $GITHUB_ENV
+            - run: |
+                  echo "Current branch $GIT_BRANCH"
 
-            git config user.name "GitHub Actions"
-            git config user.email "github-actions@users.noreply.github.com"
+                  git config user.name "GitHub Actions"
+                  git config user.email "github-actions@users.noreply.github.com"
 
-            npm version patch --no-git-tag-version
+                  npm version patch --no-git-tag-version
 
-            VERSION="$(cat package.json | jq -r '.version')"
+                  VERSION="$(cat package.json | jq -r '.version')"
 
-            git status
+                  git status
 
-            git add .
+                  git add .
 
-            git commit -m "Release ${VERSION}
+                  git commit -m "Release ${VERSION}
 
-            [skip ci]
-            "
+                  [skip ci]
+                  "
 
-            git tag ${VERSION}
+                  git tag ${VERSION}
 
-            npm publish --access public
+                  npm publish --access public
 
-            git push origin $VERSION
-            git push origin $GIT_BRANCH
-        env:
-            NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
+                  git push origin $VERSION
+                  git push origin $GIT_BRANCH
+              env:
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
