--- a/package.json
+++ b/package.json
@@ -34,24 +34,24 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^2.0.2",
-    "@stencil/core": "^4.22.0",
-    "@storybook/addon-actions": "^8.3.5",
-    "@storybook/addon-essentials": "^8.3.5",
-    "@storybook/addon-links": "^8.3.5",
-    "@storybook/addon-storysource": "^8.3.5",
-    "@storybook/blocks": "^8.3.5",
-    "@storybook/test": "^8.3.5",
-    "@storybook/web-components": "^8.3.5",
-    "@storybook/web-components-vite": "^8.3.5",
+    "@stencil/core": "^4.22.1",
+    "@storybook/addon-actions": "^8.3.6",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-storysource": "^8.3.6",
+    "@storybook/blocks": "^8.3.6",
+    "@storybook/test": "^8.3.6",
+    "@storybook/web-components": "^8.3.6",
+    "@storybook/web-components-vite": "^8.3.6",
     "@types/jest": "^29.5.13",
-    "@types/node": "^22.7.4",
+    "@types/node": "^20",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
-    "lit": "^3.2.0",
-    "puppeteer": "^23.5.0",
+    "lit": "^3.2.1",
+    "puppeteer": "^23.6.0",
     "sharp": "^0.33.5",
-    "storybook": "^8.3.5",
+    "storybook": "^8.3.6",
     "storybook-addon-stencil": "^0.2.2",
     "storybook-dark-mode": "^4.0.2",
     "typescript": "^5.5.4"
@@ -59,6 +59,7 @@
   "license": "MIT",
   "dependencies": {
     "@mdui/icons": "^1.0.2",
+    "@stencil/sass": "^3.0.12",
     "mdui": "^2.1.2",
     "swiper": "^11.1.14"
   }
