--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^3.2.2",
+        "@rollup/rollup-win32-x64-msvc": "^4.26.0",
         "@stencil/core": "^4.22.2",
         "@stencil/sass": "^3.0.12",
         "@storybook/addon-actions": "^8.4.4",
