--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "jest-cli": "^29.7.0",
         "lit": "^3.2.1",
         "puppeteer": "^23.8.0",
+        "rollup-plugin-postcss": "^4.0.2",
         "sass": "^1.80.7",
         "sass-loader": "^16.0.3",
         "sharp": "^0.33.5",
