--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@storybook/addon-essentials": "^8.4.6",
         "@storybook/addon-links": "^8.4.6",
         "@storybook/addon-storysource": "^8.4.6",
+        "@storybook/addons": "^7.6.17",
         "@storybook/blocks": "^8.4.6",
         "@storybook/test": "^8.4.6",
         "@storybook/web-components": "^8.4.6",
