--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "urnovl-web-components",
-    "version": "0.0.155-a",
+    "version": "0.0.155-d",
     "description": "Web components for Urnovl",
     "main": "dist/index.cjs.js",
     "module": "dist/index.js",
@@ -46,6 +46,7 @@
         "@storybook/test": "^8.4.6",
         "@storybook/web-components": "^8.4.6",
         "@storybook/web-components-vite": "^8.4.6",
+        "@types/dompurify": "^3.0.5",
         "@types/jest": "^29.5.14",
         "@types/node": "^20",
         "http-server": "^14.1.1",
@@ -64,6 +65,7 @@
     "license": "MIT",
     "dependencies": {
         "@mdui/icons": "^1.0.2",
+        "dompurify": "^3.2.3",
         "mdui": "^2.1.3",
         "swiper": "^11.1.15"
     }
