--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "urnovl-web-components",
-    "version": "0.0.180-j",
+    "version": "0.0.180-a1",
     "description": "Web components for Urnovl",
     "main": "dist/index.cjs.js",
     "module": "dist/index.js",
