--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -21,7 +21,8 @@ jobs:
                   node-version: 20
                   registry-url: 'https://registry.npmjs.org'
             - run: npm ci
-            - run: npm install -D storybook-addon-stencil@0.2.2
             - run: npm test
             - run: npm run build
+            - run: npm install -D storybook-addon-stencil@0.2.2
+            - run: ls ./node_modules/storybook-addon-stencil/dist/
             - run: npm run build-storybook
