--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -20,9 +20,8 @@ jobs:
               with:
                   node-version: 22
                   registry-url: 'https://registry.npmjs.org'
-            - run: npx yarn
+            - run: npm ci
             - run: npm test
             - run: npm run build
-            - run: npm install -D storybook-addon-stencil@0.2.2
             - run: ls ./node_modules/storybook-addon-stencil/dist/
             - run: npm run build-storybook
