--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "@storybook/web-components": "^8.4.6",
         "@storybook/web-components-vite": "^8.4.6",
         "@types/jest": "^29.5.14",
-        "@types/node": "^20",
+        "@types/node": "^22",
         "http-server": "^14.1.1",
         "jest": "^29.7.0",
         "jest-cli": "^29.7.0",
@@ -57,7 +57,7 @@
         "sass-loader": "^16.0.5",
         "sharp": "^0.33.5",
         "storybook": "^8.4.6",
-        "storybook-addon-stencil": "^0.2.2",
+        "storybook-addon-stencil": "0.2.2",
         "storybook-dark-mode": "^4.0.2",
         "typescript": "^5.5.4"
     },
