--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -23,4 +23,6 @@ jobs:
             - run: npm ci
             - run: npm test
             - run: npm run build
+            - run: npm list storybook-addon-stencil
+            - run: npm install --save-dev storybook-addon-stencil
             - run: npm run build-storybook
