--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -22,4 +22,6 @@ jobs:
             - run: npm ci
             - run: npm test
             - run: npm run build
-            - run: npm run build-storybook
+            - run: |
+                rm package-lock.json
+                npm run build-storybook
