--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "test.watch": "stencil test --spec --e2e --watchAll",
         "generate": "stencil generate",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "postinstall": "node ./scripts/02-patch-stencil-modules.js"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^3.2.6",
