--- a/.github/workflows/pr_merge.yml
+++ b/.github/workflows/pr_merge.yml
@@ -50,7 +50,7 @@ jobs:
 
                   git tag ${VERSION}
 
-                  npm publish --access public
+                  # npm publish --access public
 
                   git push origin $VERSION
                   git push origin $GIT_BRANCH
