--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
         "test.watch": "stencil test --spec --e2e --watchAll",
         "generate": "stencil generate",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build",
-        "postinstall": "node ./scripts/02-patch-stencil-modules.js"
+        "build-storybook": "storybook build"
     },
     "devDependencies": {
         "@chromatic-com/storybook": "^3.2.6",
@@ -43,7 +42,6 @@
         "@storybook/addon-essentials": "^8.4.6",
         "@storybook/addon-links": "^8.4.6",
         "@storybook/addon-storysource": "^8.4.6",
-        "@storybook/addons": "^7.6.17",
         "@storybook/blocks": "^8.4.6",
         "@storybook/test": "^8.4.6",
         "@storybook/web-components": "^8.4.6",
@@ -57,7 +55,7 @@
         "puppeteer": "^24.4.0",
         "sass": "^1.86.3",
         "sass-loader": "^16.0.5",
-        "sharp": "^0.33.5",
+        "sharp": "^0.34.0",
         "storybook": "^8.4.6",
         "storybook-addon-stencil": "^0.2.3",
         "storybook-dark-mode": "^4.0.2",
