--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
         "storybook": "^8.4.6",
         "storybook-addon-stencil": "^0.2.3",
         "storybook-dark-mode": "^4.0.2",
-        "typescript": "^5.5.4"
+        "typescript": "^5.5.4",
+        "ulid": "^3.0.0"
     },
     "license": "MIT",
     "dependencies": {
