--- a/package.json
+++ b/package.json
@@ -65,6 +65,11 @@
     "license": "MIT",
     "dependencies": {
         "@mdui/icons": "^1.0.2",
+        "@tiptap/core": "^2.11.7",
+        "@tiptap/extension-placeholder": "^2.11.7",
+        "@tiptap/extension-text-align": "^2.11.7",
+        "@tiptap/extension-underline": "^2.11.7",
+        "@tiptap/starter-kit": "^2.11.7",
         "dompurify": "^3.2.5",
         "mdui": "^2.1.3",
         "swiper": "^11.2.6"
